--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  width: 100vw;
 }
 
 .App-logo {
@@ -10,16 +11,12 @@
 .App-header {
   background-color: #282c34;
   padding: 50px 0;
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
+  width: 100%;
 }
 
 @keyframes App-logo-spin {
@@ -32,6 +29,24 @@
 }
 .slider-container{
   border: 1px solid black;
-  height: 300px;
-  margin-top: 50px;;
+  margin-top: 50px;
+  position:relative;
+}
+.slider-box{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  touch-action: pan-x;
+}
+.slider-item{
+  border: 1px solid black;
+  width: 250px;
+  height: 120px;
+  background: red;
+  margin: 0 10px;
+}
+div.slider-item img{
+  width: 100%;
+  height: 100%;
 }
