#3 add active item, some optimize

--- a/src/App.css
+++ b/src/App.css
@@ -1,52 +1,30 @@
-.App {
-  text-align: center;
-  width: 100vw;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 20vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  padding: 50px 0;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  width: 100%;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 .slider-container{
-  border: 1px solid black;
-  margin-top: 50px;
-  position:relative;
+  position:relative; 
+  overflow: hidden;
+  margin: 0 auto;
 }
+
 .slider-box{
   position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  touch-action: pan-x;
+}
+
+.App{
+  width: 100%;
+}
+.experimentWindow{
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+}
+.slider-line{
+  position: relative;
 }
 .slider-item{
-  border: 1px solid black;
-  width: 250px;
-  height: 120px;
-  background: red;
-  margin: 0 10px;
+  border: 3px solid transparent;
 }
-div.slider-item img{
-  width: 100%;
-  height: 100%;
+.active{
+  border: 3px solid gold;
 }
